adding to paragraph

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <p>
-        In my free time, I love reading, watching movies, editing videos, and going on random adventures to new places. I also enjoy photography and capturing little moments with friends and family. I’m looking forward to getting to know all of you better this semester and working together in this class!
+        In my free time, I love reading books, watching movies, editing videos, and going on random adventures to new places. I also enjoy photography and capturing little moments with friends and family. I’m looking forward to getting to know all of you better this semester and working together in this class!
     </p>
 
 </body>
